# pytest-warmup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
compat/: profiles.toml
docs/: design.md  publishing.md
docs/releases/: 0.1.1.md  0.1.2.md  0.1.4.md
examples/: README.md  autoresolve_usage.py  basic_usage.py  fixture_binding_usage.py  named_producer_usage.py  warmup.snapshot.json
scripts/: run_compat.py
src/pytest_warmup/: __init__.py  _errors.py  _snapshot.py  core.py  pytest_plugin.py
tests/: conftest.py  test_autoresolve_producer.py  test_cli_options.py  test_distributed_declarations.py  test_end_to_end.py  test_examples.py  test_failfast.py  test_indirect_chain.py  test_keyword_deselection.py  test_multi_binding.py  test_overrides.py  test_package_scope.py  test_package_surface.py  test_plan_lifecycle.py  test_producer_resolution.py  test_public_docstrings.py  test_scope_mismatch.py  test_snapshot_file.py
tests/snapshots/: test_overrides.snapshot.json
tests/support/: __init__.py  demo_domain.py  fake_external_api.py
